--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="hero-content">
                             <div class="container text-center">
                                 <div class="hero-static">
-                                    <h1>I'M <span class="type-text" data-elements="Peter Gajos, Web Developer, Passionate, Creative"></span> </h1>
+                                    <h1>I'M <span class="type-text" data-elements="Peter Gajos, a Web Developer, Passionate, Creative"></span> </h1>
                                     <p>I Love What I Do</p>
                                     <div class="buttons scroll-to">
                                         <a data-scroll href="#agency" class="btn btn-white-border btn-lg">About me</a>
@@ -116,7 +116,7 @@
                             <div class="row">
                                 <div class="col-md-8 offset-md-2 text-center">
                                     <p class="lead">
-                                         I'M <span class="text-color">Web Developer</span> based In Toronto. I am create awesome things for both Web & Mobile platforms. Technology courses through my vains and I am excited to learn new things everyday.
+                                         I'M a <span class="text-color">Web Developer</span> based In Toronto. I am create awesome things for both Web & Mobile platforms. Technology courses through my vains and I am excited to learn new things everyday.
                                     </p>
                                 </div>
                             </div>
